[project]
name = "sensorbio-mcp-server"
version = "0.2.0"
description = "MCP server for Sensor Bio (getsensr.io)"
urls = { Homepage = "https://github.com/GetSensr-io/sensorbio-mcp-server", Repository = "https://github.com/GetSensr-io/sensorbio-mcp-server" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sensor Bio" }]
license = { text = "MIT" }
dependencies = [
  "httpx[http2]>=0.27",
  "anyio>=4.0",
  # MCP Python SDK. Package name is `mcp`.
  "mcp>=1.2.0",
]

[project.scripts]
sensorbio-mcp-server = "sensorbio_mcp_server.server:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
